<resources>
    <string name="app_name">Goorum</string>

    <string name="list_board">게시판</string>
    <string name="list_recommend">추천 글</string>

    <string name="search_hint">검색어를 입력하세요</string>
    <string name="reply_hint">댓글을 입력하세요</string>

    <string name="write_article">글 쓰기</string>
    <string name="article_title">제목</string>
    <string name="article_sector">업종</string>
    <string name="article_company">회사</string>
    <string name="article_text">이 곳에 글을 작성하세요</string>
    <string name="save_article">저장</string>

    <string name="search">검색</string>
    <string name="send">전송</string>
    <string name="like">공감</string>
    <string name="reply">댓글</string>
    <string name="slash">\ /\ </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>