<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/page_top_bar_padding_15dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/page_icon_size_20dp"
            android:layout_height="@dimen/page_icon_size_20dp"
            android:src="@drawable/ic_arrow"
            android:layout_gravity="start|center"/>

        <TextView
            android:id="@+id/tv_board_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="게시판 이름"
            android:textSize="@dimen/page_titie_text_size_18sp"
            android:textColor="@color/board_text" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/article_inform_margin_v_5dp"
        android:layout_marginBottom="@dimen/article_inform_margin_v_5dp"
        android:layout_marginStart="@dimen/article_outer_margin_h_20dp"
        android:layout_marginEnd="@dimen/article_outer_margin_h_20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_writer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="글쓴이"
                android:textSize="@dimen/article_text_size_13sp"
                android:textColor="@color/board_text"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20/02/01 12:00"
                android:textSize="@dimen/article_text_size_11sp"
                android:textColor="@color/main_article_text_gray"/>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_like"
            android:layout_width="@dimen/like_icon_size_20dp"
            android:layout_height="@dimen/like_icon_size_20dp"
            android:background="@drawable/ic_heart"
            android:button="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="제목"
        android:textSize="@dimen/article_text_size_15sp"
        android:textColor="@color/board_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/article_inform_margin_v_5dp"
        android:layout_marginStart="@dimen/article_outer_margin_h_20dp"
        android:layout_marginEnd="@dimen/article_outer_margin_h_20dp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="내용"
        android:textSize="@dimen/article_text_size_13sp"
        android:textColor="@color/board_text"
        android:layout_marginTop="@dimen/article_inform_margin_v_5dp"
        android:layout_marginStart="@dimen/article_outer_margin_h_20dp"
        android:layout_marginEnd="@dimen/article_outer_margin_h_20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_inform_margin_v_5dp"
        android:layout_marginBottom="@dimen/article_inform_margin_v_5dp"
        android:layout_marginStart="@dimen/article_outer_margin_h_20dp"
        android:layout_marginEnd="@dimen/article_outer_margin_h_20dp"
        android:gravity="start|center" >

        <ImageView
            android:layout_width="@dimen/like_icon_size_15dp"
            android:layout_height="@dimen/like_icon_size_15dp"
            android:src="@drawable/ic_heart_off" />

        <TextView
            android:id="@+id/tv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textSize="@dimen/article_text_size_13sp"
            android:textColor="@color/board_text"
            android:layout_marginStart="@dimen/article_count_margin_h_5dp"
            android:layout_marginEnd="@dimen/article_count_margin_h_5dp"/>

        <ImageView
            android:layout_width="@dimen/like_icon_size_15dp"
            android:layout_height="@dimen/like_icon_size_15dp"
            android:src="@drawable/ic_reply" />

        <TextView
            android:id="@+id/tv_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textSize="@dimen/article_text_size_13sp"
            android:textColor="@color/board_text"
            android:layout_marginStart="@dimen/article_count_margin_h_5dp"
            android:layout_marginEnd="@dimen/article_count_margin_h_5dp" />

        <TextView
            android:id="@+id/tv_sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="업종"
            android:textSize="@dimen/article_text_size_13sp"
            android:textColor="@color/board_text"
            android:layout_marginStart="@dimen/article_count_margin_h_5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textSize="@dimen/article_text_size_13sp"
            android:textColor="@color/board_text" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="회사"
            android:textSize="@dimen/article_text_size_13sp"
            android:textColor="@color/board_text" />
    </LinearLayout>

    <View style="@style/HorizontalSplit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reply"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View style="@style/HorizontalSplit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/reply_input_margin_10dp"
        android:layout_marginBottom="@dimen/reply_input_margin_10dp"
        android:layout_marginStart="@dimen/reply_input_margin_10dp"
        android:layout_marginEnd="@dimen/reply_input_margin_10dp" >

        <EditText
            android:id="@+id/et_reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/reply_hint"
            android:textSize="@dimen/reply_text_size_15sp"
            android:textColor="@color/board_text"
            android:imeOptions="actionSend"
            android:paddingStart="@dimen/reply_input_padding_h_10dp"
            android:paddingEnd="@dimen/reply_input_padding_h_10dp" />

        <TextView
            android:id="@+id/btn_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_send"
            android:text="@string/send"
            android:textSize="@dimen/reply_text_size_15sp"
            android:textColor="@color/board_text"
            android:paddingTop="@dimen/btn_padding_v_5dp"
            android:paddingBottom="@dimen/btn_padding_v_5dp"
            android:paddingStart="@dimen/btn_padding_h_10dp"
            android:paddingEnd="@dimen/btn_padding_h_10dp"/>
    </LinearLayout>
</LinearLayout>